Save controller node config.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -68,6 +68,7 @@ client_DATA = \
   clients/prep_shrink_finish.rb \
   clients/proxy_finish.rb \
   clients/remote_finish.rb \
+  clients/roles_finish.rb \
   clients/save_config_finish.rb \
   clients/save_hw_status_finish.rb \
   clients/services_finish.rb \
@@ -192,6 +193,7 @@ ylibclient_DATA = \
   lib/installation/clients/network_finish.rb \
   lib/installation/clients/pre_umount_finish.rb \
   lib/installation/clients/proxy_finish.rb \
+  lib/installation/clients/roles_finish.rb \
   lib/installation/clients/save_config_finish.rb \
   lib/installation/clients/save_hw_status_finish.rb \
   lib/installation/clients/services_finish.rb \
@@ -217,6 +219,11 @@ ylibwidget_DATA = \
   lib/installation/widgets/overview.rb \
   lib/installation/widgets/system_role.rb
 
-EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(schemafiles_DATA) $(desktop_DATA) $(fillup_DATA) $(ylibdialog_DATA) $(ylib_DATA) $(ylibtransfer_DATA)
+ylibcfadir = "${yast2dir}/lib/installation/cfa"
+ylibcfa_DATA = \
+  lib/installation/cfa/salt.rb
+
+
+EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(schemafiles_DATA) $(desktop_DATA) $(fillup_DATA) $(ylibdialog_DATA) $(ylib_DATA) $(ylibtransfer_DATA) $(ylibcfa_DATA)
 
 include $(top_srcdir)/Makefile.am.common
